# DataGuardian

./: .replit  DOWNLOAD_PACKAGE.md  INSTALLATION_GUIDE.md  LOCAL_SETUP.md  README.md  REBUILD_PROMPT.md  VISUAL_BUILD_GUIDE.md  app_fixed.py  auth.py  create_download_package.py  data_persistence.py  domain_classifier.py  domains.json  local_config.toml  local_requirements.txt  performance_config.py  pyproject.toml  replit.md  requirements_linux.txt  requirements_mac.txt  requirements_windows.txt  run_mac.py  run_mac.sh  run_windows.bat  run_windows.py  security_config.py
.streamlit/: config.toml
attached_assets/: Pasted--Project-Overview-Build-a-simplified-yet-powerful-Data-Loss-Prevention-DLP-email-monitoring-syst-1752573467818_1752573467819.txt  Pasted-1-Core-Function-Create-Mailto-Link-def-create-outlook-mailto-link-email-data-email-template--1752609005464_1752609005465.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Layout-titlefont-Did--1752578883423_1752578883423.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Scatter-dragmode-Did--1752579949334_1752579949336.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-scatter-marker-ColorBar--1752582760091_1752582760093.txt  Pasted-streamlit-errors-StreamlitDuplicateElementKey-There-are-multiple-elements-with-the-same-key-clear--1752584219415_1752584219415.txt
daily_data/: email_data_2025-07-16.json
data_backups/: backup_2025-07-15_205508.json  backup_2025-07-16_130209.json  backup_2025-07-16_134648.json  (+1 more)
(+2 files in other folders)
